src/Sci.NET.CUDA/Native/ArithmeticNativeMethods.cs


    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorI16(
        short* left,
        short* right,
        short* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorI32(
        int* left,
        int* right,
        int* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorI64(
        long* left,
        long* right,
        long* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "negate_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode NegateTensorFp32(
        float* input,
        float* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "negate_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode NegateTensorFp64(
        double* input,
        double* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "negate_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode NegateTensorI8(
        sbyte* input,
        sbyte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "negate_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode NegateTensorI16(
        short* input,
        short* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "negate_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode NegateTensorI32(
        int* input,
        int* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "negate_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode NegateTensorI64(
        long* input,
        long* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "abs_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AbsTensorFp32(
        float* input,
        float* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "abs_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AbsTensorFp64(
        double* input,
        double* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "abs_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AbsTensorI8(
        sbyte* input,
        sbyte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "abs_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AbsTensorI16(
        short* input,
        short* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "abs_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AbsTensorI32(
        int* input,
        int* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "abs_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AbsTensorI64(
        long* input,
        long* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorFp32(
        float* input,
        float* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorFp64(
        double* input,
        double* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorU8(
        byte* input,
        byte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorU16(
        ushort* input,
        ushort* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorU32(
        uint* input,
        uint* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorU64(
        ulong* input,
        ulong* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorI8(
        sbyte* input,
        sbyte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorI16(
        short* input,
        short* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorI32(
        int* input,
        int* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sqrt_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SqrtTensorI64(
        long* input,
        long* result,
        long n);
}